# taichi-release-tests

./: .gitignore  README.md  args.py  compare.py  exceptions.py  pyproject.toml  record.py  run.py  waterwave.yaml
actions/: __init__.py  capture.py  common.py  gui.py  gui_events.py  poke.py  simple.py
scripts/: find_untracked_release_tests.py
timelines/: taichi.yaml
timelines/difftaichi/: billiards.yml  diffmpm.yml  diffmpm3d.yml  diffmpm_checkpointing.yml  diffmpm_simple.yml  electric.yml  mass_spring.yml  mass_spring_interactive.yml  mass_spring_simple.yml  smoke_taichi.yml  smoke_taichi_cpu.yml  smoke_taichi_gpu.yml  volume_renderer.yml  water_renderer.yml  wave.yml
timelines/games201/: mass_spring_explicit.yml
timelines/quantaichi/: gol.yaml.disabled_fallback_cpu_cost_1800s
timelines/taichi/: minimal.yaml  patterns.yaml
timelines/taichi/algorithm/: circle_packing_image.yaml  laplace.yaml  marching_squares.yaml  mciso_advanced.yaml  mgpcg.yaml  mgpcg_advanced.yaml  poisson_disk_sampling.yaml  print_offset.yaml
timelines/taichi/autodiff/: minimization.yaml  regression.yaml  simple_derivative.yaml
timelines/taichi/ggui_examples/: fem128_ggui.yaml  fractal3d_ggui.yaml  mass_spring_3d_ggui.yaml  mass_spring_game_ggui.yaml  mpm128_ggui.yaml  mpm3d_ggui.yaml  stable_fluid_ggui.yaml
timelines/taichi/graph/: mpm88_graph.yaml  stable_fluid_graph.yaml
timelines/taichi/real_func/: marching_squares.yml
timelines/taichi/rendering/: cornell_box.yaml  rasterizer.yaml  sdf_renderer.yaml  simple_uv.yaml  taichi_logo.yaml  taichi_ngp.yaml
utils/: misc.py
(+58 files in other folders)
