[tool.poetry]
name = "taichi-release-test"
version = "0.1.0"
description = ""
authors = ["Proton <feisuzhu@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
